force-app/main/default/objects/Agency_Portal_Settings__c/Agency_Portal_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Agency Portal Settings</description>
    <label>Agency Portal Settings</label>
</CustomObject>