force-app/main/default/objects/Agency_Portal_Settings__c/fields/Agency_Complaint_Status__c.field-meta.xml
<CustomField>
    <fullName>Agency_Complaint_Status__c</fullName>
    <description>Agency Complaint Status</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Complaint Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>