force-app/main/default/objects/Agency_Portal_Settings__c/fields/Agency_Work_Assignment_RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>Agency_Work_Assignment_RecordTypeID__c</fullName>
    <description>Agency Work Assignment RecordTypeID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency Work Assignment RecordTypeID</inlineHelpText>
    <label>Agency Work Assignment RecordTypeID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>