force-app/main/default/objects/Agency_Portal_Settings__c/fields/AgencyComplaintWorkAssignmentRecordType__c.field-meta.xml
<CustomField>
    <fullName>AgencyComplaintWorkAssignmentRecordType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AgencyComplaintWorkAssignmentRecordTypeI</label>
    <length>20</length>
    <type>Text</type>
</CustomField>