force-app/main/default/objects/Agency_Portal_Settings__c/fields/AgencyExcelProcessingRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>AgencyExcelProcessingRecordTypeID__c</fullName>
    <description>AgencyExcelProcessingRecordTypeID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>AgencyExcelProcessingRecordTypeID</inlineHelpText>
    <label>AgencyExcelProcessingRecordTypeID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>