force-app/main/default/objects/Agency_Portal_Settings__c/fields/AgencyMediaWorkAssignmentRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>AgencyMediaWorkAssignmentRecordTypeID__c</fullName>
    <description>AgencyMediaWorkAssignmentRecordTypeID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>AgencyMediaWorkAssignmentRecordTypeID</inlineHelpText>
    <label>AgencyMediaWorkAssignmentRecordTypeID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>