force-app/main/default/objects/Agency_Portal_Settings__c/fields/CFG_Complaint_Status__c.field-meta.xml
<CustomField>
    <fullName>CFG_Complaint_Status__c</fullName>
    <description>CFG Complaint Status</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CFG Complaint Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>