force-app/main/default/objects/Agency_Portal_Settings__c/fields/CFGComplaintWorkAssignmentRecordID__c.field-meta.xml
<CustomField>
    <fullName>CFGComplaintWorkAssignmentRecordID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CFGComplaintWorkAssignmentRecordID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>