force-app/main/default/objects/Agency_Portal_Settings__c/fields/CFGExcelProcessingReccordTypeID__c.field-meta.xml
<CustomField>
    <fullName>CFGExcelProcessingReccordTypeID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CFGExcelProcessingReccordTypeID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>