force-app/main/default/objects/Agency_Portal_Settings__c/fields/CFGMediaWorkAssignmentRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>CFGMediaWorkAssignmentRecordTypeID__c</fullName>
    <description>CFGMedia WorkAssignment RecordTypeID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CFG Media WorkAssignment RecordTypeID</inlineHelpText>
    <label>CFGMediaWorkAssignmentRecordTypeID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>