force-app/main/default/objects/Agency_Portal_Settings__c/fields/CFGWorkAssignmentRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>CFGWorkAssignmentRecordTypeId__c</fullName>
    <description>CFGWorkAssignmentRecordTypeId</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CFGWorkAssignmentRecordTypeId</inlineHelpText>
    <label>CFGWorkAssignmentRecordTypeId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>