force-app/main/default/objects/Agency_Portal_Settings__c/fields/Distressed_Document_Storage_RecordtypeID__c.field-meta.xml
<CustomField>
    <fullName>Distressed_Document_Storage_RecordtypeID__c</fullName>
    <description>Distressed Document Storage RecordtypeID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Distressed Document Storage RecordtypeID</inlineHelpText>
    <label>Distressed Document Storage RecordtypeID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>