force-app/main/default/objects/Agency_Portal_Settings__c/fields/Distressed_Payment_RecordType_ID__c.field-meta.xml
<CustomField>
    <fullName>Distressed_Payment_RecordType_ID__c</fullName>
    <description>Distressed Product Payment Record Type ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Distressed Product Payment Record Type ID</inlineHelpText>
    <label>Distressed Payment RecordType ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>