force-app/main/default/objects/Agency_Portal_Settings__c/fields/Distressed_Product_RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>Distressed_Product_RecordTypeID__c</fullName>
    <description>Distressed Product RecordTypeID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Distressed Product RecordTypeID</inlineHelpText>
    <label>Distressed Product RecordTypeID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>