force-app/main/default/objects/Agency_Portal_Settings__c/fields/Document_Storage_Default_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Document_Storage_Default_Visibility__c</fullName>
    <description>Document Storage Default Visibility</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Document Storage Default Visibility</inlineHelpText>
    <label>Document Storage Default Visibility</label>
    <length>30</length>
    <type>Text</type>
</CustomField>