force-app/main/default/objects/Agency_Portal_Settings__c/fields/Domain_name__c.field-meta.xml
<CustomField>
    <fullName>Domain_name__c</fullName>
    <description>Domain name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Domain name</inlineHelpText>
    <label>Domain name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>