force-app/main/default/objects/Agency_Portal_Settings__c/fields/Excel_File_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Excel_File_Processing_Status__c</fullName>
    <description>Excel File Processing Status</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Excel File Processing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>