force-app/main/default/objects/Agency_Portal_Settings__c/fields/Judgment_Settlement_RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Settlement_RecordTypeID__c</fullName>
    <description>Judgment Settlement RecordTypeID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Judgment Settlement RecordTypeID</inlineHelpText>
    <label>Judgment Settlement RecordTypeID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>