force-app/main/default/objects/Agency_Portal_Settings__c/fields/Media_Status__c.field-meta.xml
<CustomField>
    <fullName>Media_Status__c</fullName>
    <description>Media Status</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Media Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>