force-app/main/default/objects/Agency_Portal_Settings__c/fields/MutipleFileUpload__c.field-meta.xml
<CustomField>
    <fullName>MutipleFileUpload__c</fullName>
    <description>This field is used to store the first 3 characters from the id for multiple file upload functionality.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is used to store the first 3 characters from the id for multiple file upload functionality.</inlineHelpText>
    <label>MutipleFileUpload</label>
    <length>50</length>
    <type>Text</type>
</CustomField>