force-app/main/default/objects/Agency_Portal_Settings__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <description>Number of Days for Interest Calculation</description>
    <inlineHelpText>Number of Days for Interest Calculation</inlineHelpText>
    <label>Number of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>