force-app/main/default/objects/Agency_Portal_Settings__c/fields/Pool_Recall_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Pool_Recall_Reasons__c</fullName>
    <description>Pool Recall Reasons for Pool in comma seperated form</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Pool Recall Reasons</inlineHelpText>
    <label>Pool Recall Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>