force-app/main/default/objects/Agency_Portal_Settings__c/fields/Post_Judgment_RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>Post_Judgment_RecordTypeId__c</fullName>
    <description>Store the Post-Judgment RecordTypeId</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Store the Post-Judgment RecordTypeId</inlineHelpText>
    <label>Post-Judgment RecordTypeId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>