force-app/main/default/objects/Agency_Portal_Settings__c/fields/Product_Settlement_RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>Product_Settlement_RecordTypeID__c</fullName>
    <description>Product Settlement RecordTypeID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Product Settlement RecordTypeID</inlineHelpText>
    <label>Product Settlement RecordTypeID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>