force-app/main/default/objects/Agency_Portal_Settings__c/fields/Run_AccountJudgment_API_for_Portal__c.field-meta.xml
<CustomField>
    <fullName>Run_AccountJudgment_API_for_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run AccountJudgment API for Portal</description>
    <inlineHelpText>Run AccountJudgment API for Portal</inlineHelpText>
    <label>Run AccountJudgment API for Portal</label>
    <type>Checkbox</type>
</CustomField>