force-app/main/default/objects/Agency_Portal_Settings__c/fields/Run_Agency_User_Update_API_for_Portal__c.field-meta.xml
<CustomField>
    <fullName>Run_Agency_User_Update_API_for_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run Agency User Update API for Portal</description>
    <inlineHelpText>Run Agency User Update API for Portal</inlineHelpText>
    <label>Run Agency User Update API for Portal</label>
    <type>Checkbox</type>
</CustomField>