force-app/main/default/objects/Agency_Portal_Settings__c/fields/Run_Distressed_Notes_API_for_Portal__c.field-meta.xml
<CustomField>
    <fullName>Run_Distressed_Notes_API_for_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run Distressed Notes API for Portal</description>
    <inlineHelpText>Run Distressed Notes API for Portal</inlineHelpText>
    <label>Run Distressed Notes API for Portal</label>
    <type>Checkbox</type>
</CustomField>