force-app/main/default/objects/Agency_Portal_Settings__c/fields/Run_Judgment_Update_API_For_Portal__c.field-meta.xml
<CustomField>
    <fullName>Run_Judgment_Update_API_For_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run Judgment Update API For Portal</description>
    <inlineHelpText>Run Judgment Update API For Portal</inlineHelpText>
    <label>Run Judgment Update API For Portal</label>
    <type>Checkbox</type>
</CustomField>