force-app/main/default/objects/Agency_Portal_Settings__c/fields/Run_Product_API__c.field-meta.xml
<CustomField>
    <fullName>Run_Product_API__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run Product API</description>
    <inlineHelpText>Run Product API</inlineHelpText>
    <label>Run Product API</label>
    <type>Checkbox</type>
</CustomField>