force-app/main/default/objects/Agency_Portal_Settings__c/fields/Run_Product_Name_Logic__c.field-meta.xml
<CustomField>
    <fullName>Run_Product_Name_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run Product Name setting logic from Account Purchase group</description>
    <inlineHelpText>Run Product Name setting logic from Account Purchase group</inlineHelpText>
    <label>Run Product Name Logic</label>
    <type>Checkbox</type>
</CustomField>