force-app/main/default/objects/Agency_Portal_Settings__c/fields/Send_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send Notification Check</description>
    <inlineHelpText>Send Notification Check</inlineHelpText>
    <label>Send Notification</label>
    <type>Checkbox</type>
</CustomField>