force-app/main/default/objects/Agency_Portal_Settings__c/fields/Valid_Payment_Types__c.field-meta.xml
<CustomField>
    <fullName>Valid_Payment_Types__c</fullName>
    <description>Valid payment type</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Valid payment type</inlineHelpText>
    <label>Valid Payment Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>