force-app/main/default/objects/Agency_Portal_Settings__c/fields/validAccStatusHavingJudgmentHeaders__c.field-meta.xml
<CustomField>
    <fullName>validAccStatusHavingJudgmentHeaders__c</fullName>
    <description>valid Accounts Status Having Judgment Headers</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>valid Accounts Status Having Judgment Headers</inlineHelpText>
    <label>validAccStatusHavingJudgmentHeaders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>