force-app/main/default/objects/Agency_Portal_Settings__c/fields/validAccStatusUpdateHeaders__c.field-meta.xml
<CustomField>
    <fullName>validAccStatusUpdateHeaders__c</fullName>
    <description>valid Accounts Status Update Headers</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>valid Accounts Status Update Headers</inlineHelpText>
    <label>validAccStatusUpdateHeaders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>