force-app/main/default/objects/Agency_Portal_Settings__c/fields/validCustomerContactInfoUpdateHeaders__c.field-meta.xml
<CustomField>
    <fullName>validCustomerContactInfoUpdateHeaders__c</fullName>
    <description>valid Customer Contact Indo Update Headers</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>valid Customer Contact Indo Update Headers</inlineHelpText>
    <label>validCustomerContactInfoUpdateHeaders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>