force-app/main/default/objects/Agency_Portal_Settings__c/fields/validProductAllocationHeaders__c.field-meta.xml
<CustomField>
    <fullName>validProductAllocationHeaders__c</fullName>
    <description>valid Product Allocation Headers</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>valid Product Allocation Headers</inlineHelpText>
    <label>validProductAllocationHeaders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>