force-app/main/default/objects/Agency_Portal_Settings__c/fields/validProductPaymentHeaders__c.field-meta.xml
<CustomField>
    <fullName>validProductPaymentHeaders__c</fullName>
    <description>valid Product Payment Headers</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>valid Product Payment Headers</inlineHelpText>
    <label>validProductPaymentHeaders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>