force-app/main/default/objects/Agency_Portal_Settings__c/fields/validProductRecallHeaders__c.field-meta.xml
<CustomField>
    <fullName>validProductRecallHeaders__c</fullName>
    <description>valid Product Recall Headers</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>valid Product Recall Headers</inlineHelpText>
    <label>validProductRecallHeaders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>