force-app/main/default/objects/Agency_Portal_Settings__c/fields/Work_Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Assignment_Status__c</fullName>
    <description>Work Assignment Status</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Assignment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>